tests/sema/fail/v39_fail_duplicate_sum_type.ep
# COMPILE_FAIL_CONTAINS: duplicate type Value
type Left {}
type Right {}

type Value = Left | Right
type Value = Right | Left
